--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
+  "engines": {
+    "node":"14.15.3",
+    "npm":"6.14.9"
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.2.0",
